# igloo

./: .gitignore  .gitmodules  .travis.yml  .vimrc  CMakeLists.txt  CNAME  Makefile  README.md  assert.h  assertionexception.h  assertionexception.hpp  assertions.md  cross_compile.sh  discuss.md  downloads.md  expressions.h  igloo-tests_CXX_cotire.cmake  igloo.cpp  igloo.cpp.out  igloo.h  igloo.hpp  igloo.tmproj  igloo_tests.cpp  index.html  index.md  is.h  params.json  rakefile  snowhouse-tests_CXX_cotire.cmake  stringize.h  stringizers.h  stringsyntax.h  syntax.h  syntaxbase.h  testfixture.h  testfixture.hpp  testfixturerunner.h  testresult.h  testrunner.h  testrunner.hpp  (+3 more)
_layouts/: default.html  index.html
_posts/: 2013-06-29-welcome-to-jekyll.markdown
constraints/: andexpression.h  andoperator.h  assertions.h  constraint.h  constraintexpression.h  containsconstraint.h  endswithconstraint.h  equalsconstraint.h  equalto_constraint.h  equaltoconstraint.h  equaltooperator.h  expression.h  expressionbuilder.h  greaterthanconstraint.h  haslengthconstraint.h  ioperator.h  is.h  isgreaterthanconstraint.h  islessthanconstraint.h  itoken.h  lessthanconstraint.h  logicaloperator.h  not_constraint.h  notexpression.h  notoperator.h  operatorstack.h  startswithconstraint.h  stringcontainingconstraint.h  stringendingwithconstraint.h  stringstartingwithconstraint.h
cotire/: igloo-tests_CXX_prefix.hxx  igloo-tests_CXX_prefix.hxx.gch  snowhouse-tests_CXX_prefix.hxx  snowhouse-tests_CXX_prefix.hxx.gch
css/: main.css
expressions/: assert.h  assertions.h  expression.h  expressionitem.h  stringcontainingconstraint.h~
expressionsyntax/: expressionsyntax.h  rootsyntax.h  stringsyntax.h  syntax.h
fluent/: alloperator.h  andoperator.h  constraintadapter.h  constraintlist.h  constraintoperator.h  expressionbuilder.h  fluent.h  notoperator.h  oroperator.h
igloo/: igloo.h  igloo_alt.h  igloo_framework.h  igloo_helper.h
syntax/: binarynode.h  constraintnode.h  constraintoperations.h  expressions.h  iexpressionowner.h  inodeowner.h  node.h  nodebase.h  rootnode.h  statements.h  stringconstraintoperations.h  stringsyntax.h  syntaxtree.h  unarynode.h
tests/: abstract_tests.cpp  alternative_registration.cpp  assertmacro_tests.cpp  bdd_tests.cpp  boolean_constraints.cpp  coloredconsoletestresultsoutput_tests.cpp  container_spec.cpp  container_tests.cpp  context_error_handling.cpp  context_metadata.cpp  contextregistry_tests.cpp  custom_matchers_test.cpp  defaulttestresultsoutput_tests.cpp  exceptions_tests.cpp  explicit_namespace_import.cpp  expression_error_handling.cpp  fluent_tests.cpp  igloo_self_test.h  igloo_tests.cpp  ignoring_specs_tests.cpp  main.cpp  makefile  map_tests.cpp  nested_contexts.cpp  operator_tests.cpp  rakefile  running_subsets_of_tests.cpp  sequence_container_tests.cpp  string_line_tests.cpp  string_tests.cpp  stringize_tests.cpp  stringizer_tests.cpp  testfixture_tests.cpp  testfixtures.cpp  testlistener_tests.cpp  testresultfactory_tests.cpp  testresults_tests.cpp  type_tests.cpp  (+4 more)
(+124 files in other folders)
